# qbittorrent-rs

./: Cargo.toml
src/: api.rs  data.rs  main.rs
